# NetSpecter

./: .env.example  .gitignore  =13.7.0  README.md  plan.md  pyproject.toml  test_models.py
backend/: __init__.py  cli.py  config.py  main.py
backend/ai/: __init__.py  context.py  openrouter.py  prompts.py  synthesis.py
backend/analysis/: __init__.py  legitdomains.txt  models.py  parser.py  smart_filter.py  statistics.py
backend/analysis/detectors/: __init__.py  base.py  beacon.py  dns_tunnel.py  exfiltration.py  port_scan.py
backend/api/: __init__.py  routes.py  websocket.py
backend/enrichment/: __init__.py  abuseipdb.py  cache.py  cascading.py  filter.py  manager.py  models.py  otx.py  prioritizer.py  virustotal.py
backend/output/: __init__.py  console.py  report.py  wireshark.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/charts/: ProtocolChart.tsx  TrafficTimeline.tsx
frontend/src/components/dashboard/: StatCard.tsx  ThreatList.tsx
frontend/src/components/filters/: WiresharkFilters.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Progress.tsx  SeverityBadge.tsx  Tooltip.tsx
frontend/src/components/upload/: FileUpload.tsx
frontend/src/pages/: AnalyzePage.tsx  DashboardPage.tsx  LiveAnalysis.tsx
frontend/src/services/: api.ts
frontend/src/types/: analysis.ts
tests/: conftest.py  test_detectors.py  test_enrichment.py  test_parser.py  test_prioritizer.py  test_sample_pcap.py  test_synthesis.py  test_wireshark.py
