[project]
name = "netspecter"
version = "0.1.0"
description = "NetSpecter: Network Packet Analysis Tool for Cybersecurity Investigation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Divyansh Pandya"}
]
keywords = ["network", "pcap", "security", "packet-analysis", "threat-detection"]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    
    # PCAP Parsing
    "dpkt>=1.9.8",
    "scapy>=2.5.0",
    
    # Configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    
    # HTTP Client (for threat intel APIs)
    "httpx>=0.26.0",
    
    # Async support
    "aiofiles>=23.2.1",
    
    # Utilities
    "structlog>=24.1.0",
    
    # CLI Interface
    "rich>=13.7.0",
]

[project.scripts]
netspecter = "backend.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["backend"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
